# oxshell

./: .gitignore  Cargo.toml  README.md
.oxshell/skills/create-skill/: SKILL.md
.oxshell/skills/explain/: SKILL.md
.oxshell/skills/todo/: SKILL.md
src/: main.rs
src/a2e/: executor.rs  mod.rs  store.rs  types.rs
src/bridge/: mod.rs  routes.rs  server.rs  types.rs  ws.rs
src/cli/: mod.rs
src/compaction/: mod.rs
src/config/: mod.rs  setup.rs
src/context/: mod.rs
src/cost/: mod.rs
src/doctor/: mod.rs
src/hooks/: manager.rs  mod.rs  types.rs
src/llm/: client.rs  embeddings.rs  mod.rs  streaming.rs  types.rs
src/mcp/: manager.rs  mod.rs  protocol.rs  tool_adapter.rs  transport.rs
src/memory/: extraction.rs  index.rs  mod.rs  retrieval.rs  store.rs  types.rs
src/permissions/: mod.rs
src/plugins/: loader.rs  manifest.rs  mod.rs  registry.rs
src/session/: mod.rs  store.rs  types.rs
src/skills/: discovery.rs  execution.rs  mod.rs  parser.rs  types.rs
src/storage/: mod.rs
src/tasks/: agent.rs  coordinator.rs  manager.rs  mod.rs  types.rs
src/theme/: mod.rs
src/tools/: a2e.rs  bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  mod.rs  skill.rs  task_tools.rs
src/ui/: chat.rs  input.rs  mod.rs  render.rs  status.rs
src/vim/: mod.rs  motions.rs  state.rs
src/voice/: capture.rs  mod.rs  state.rs
tests/: a2e_tests.rs  config_tests.rs  input_tests.rs  llm_tests.rs  memory_tests.rs  plugin_tests.rs  security_tests.rs  skills_tests.rs  store_tests.rs  tasks_tests.rs  tools_tests.rs
