[package]
name = "oxshell"
version = "0.1.0"
edition = "2021"
description = "AI coding assistant for the terminal — powered by Cloudflare Workers AI + minimemory, built in Rust"
license = "MIT"
authors = ["Mauricio Perera"]

[[bin]]
name = "oxshell"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client + streaming
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
futures-util = "0.3"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
minimemory = { git = "https://github.com/MauricioPerera/minimemory" }

# File operations (.gitignore-aware walking + glob matching)
ignore = "0.4"
globset = "0.4"
regex = "1"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
sha2 = "0.10"
unicode-width = "0.2"
async-trait = "0.1"
tokio-util = "0.7"

# Bridge server (HTTP + WebSocket)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
